added single-view for books

--- a/templates/books/books.html
+++ b/templates/books/books.html
@@ -14,6 +14,8 @@
     <div class ="genre">
         <span><b>Genre: </b>{{book.genre}}</span>
     </div>
+        <a href="/books/{{book.id}}"{{book.title}}>{{book.title}}</a>
+    <br>
     <br>
 
 
